# IZG-speed

./: CMakeLists.txt  Doxyfile  dealWithTeacherSolution.cmake
.ralph/: izg-gpu-implementation.md  izg-gpu-implementation.state.json  izg-gpu-optimization.md  izg-gpu-optimization.state.json
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_4c6659ab490979c5064c3bf8269df3c3.html  dir_4c6659ab490979c5064c3bf8269df3c3.js  dir_4cffcd3ebc512530a60c19fab5d6e34d.html  dir_4cffcd3ebc512530a60c19fab5d6e34d.js  dir_61647ed5fdcfcce738965504459ce38c.html  dir_61647ed5fdcfcce738965504459ce38c.js  dir_85649049a720225b7d6c8b7b3e6512dd.html  dir_85649049a720225b7d6c8b7b3e6512dd.js  dir_8798ef005d18b781bef232fba63d3519.html  dir_8798ef005d18b781bef232fba63d3519.js  dir_d7ef0063ca86e70b103886c154b9a640.html  dir_d7ef0063ca86e70b103886c154b9a640.js  dir_f702741958caaad3883ec829f499a2f8.html  dir_f702741958caaad3883ec829f499a2f8.js  drawExample_8cpp.html  files.html  files_dup.js  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  modelFwd_8hpp.html  modelFwd_8hpp.js  modelFwd_8hpp_source.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js  (+174 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_21.js  all_23.js  all_24.js  all_25.js  all_26.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  (+112 more)
doc/latex/: annotated.tex  drawExample_8cpp.tex  files.tex  index.tex  modelFwd_8hpp.tex  modelFwd_8hpp_source.tex  p01_jakNaTo.tex  p02_gpuTheory.tex  p03_commandTasks.tex  p04_commands_clear_tasks.tex  p05_commands_user_sub_draw_tasks.tex  p06_pipeline_vector_part_theory.tex  p07_pipeline_vector_part_tasks.tex  p08_pipeline_primitive_part_theory.tex  p09_rasterization_theory.tex  p10_per_fragment_operations.tex  p12_pfo_early.tex  p13_per_fragment_operations.tex  p14_pipeline_clipping.tex  p15_drawModel.tex  p16_rozdeleni.tex  p17_sestaveni.tex  p18_spousteni.tex  p19_ovladani.tex  p20_testovani.tex  p21_odevzdavani.tex  p22_caste_chyby.tex  p23_hodnoceni.tex  p24_soutez.tex  p25_zaver.tex  prepareModel_8cpp.tex  prepareModel_8hpp.tex  prepareModel_8hpp_source.tex  refman.tex  shaderFunctions_8hpp.tex  shaderFunctions_8hpp_source.tex  solutionInterface_2src_2solutionInterface_2gpu_8hpp.tex  solutionInterface_2src_2solutionInterface_2gpu_8hpp_source.tex  structBackfaceCulling.tex  structBindFramebufferCommand.tex  (+48 more)
docSrc/: 00_main.dox  01_jak_na_projekt.dox  02_commands_theory.dox  03_commands_set_tasks.dox  04_commands_clear_tasks.dox  05_commands_user_sub_draw_tasks.dox  06_pipeline_vector_part_theory.dox  07_pipeline_vertex_part_tasks.dox  08_pipeline_primitive_part_theory.dox  09_rasterization.dox  11_per_fragment_operations.dox  12_early_pfo.dox  13_late_pfo.dox  14_pipeline_clipping.dox  15_model_tasks.dox  16_rozdeleni.dox  17_sestaveni.dox  18_spousteni.dox  19_ovladani.dox  20_testovani.dox  21_odevzdavani.dox  22_caste_chyby.dox  23_hodnoceni.dox  24_soutez.dox  25_zaver.dox  drawExample.cpp
examples/: CMakeLists.txt
examples/src/examples/: additiveBlending.cpp  angry.cpp  anime.cpp  china.cpp  czFlagMethod.cpp  edgeDetect.cpp  emptyMethod.cpp  izg2026.cpp  izg2026.hpp  maxBlending.cpp  minBlending.cpp  mirror.cpp  modelMethod.cpp  nyra.cpp  parrots.cpp  parrots.hpp  phongMethod.cpp  rotatingTriangles.cpp  shadowMapping.cpp  shadowModel.cpp  shadowModel.hpp  skFlagMethod.cpp  stairs.cpp  stencilTriangle.cpp  subtractiveBlending.cpp  texturedQuadMethod.cpp  triangle3DMethod.cpp  triangleBufferMethod.cpp  triangleClip1Method.cpp  triangleClip2Method.cpp  triangleMethod.cpp  video.cpp
framework/: CMakeLists.txt
framework/src/framework/: application.cpp  application.hpp  arguments.cpp  arguments.hpp  method.hpp  model.cpp  model.hpp  programContext.cpp  programContext.hpp  switchSolution.cpp  switchSolution.hpp  systemSpecific.cpp  systemSpecific.hpp  systemSpecificLinux.inl  systemSpecificWindows.inl  textureData.cpp  textureData.hpp  window.cpp  window.hpp
resources/models/: izg2026.glb
solutionInterface/: CMakeLists.txt
solutionInterface/src/solutionInterface/: gpu.cpp  gpu.hpp  modelFwd.cpp  modelFwd.hpp  taskFunctions.cpp  taskFunctions.hpp  uniformLocations.hpp
src/: main.cpp
studentSolution/: CMakeLists.txt
studentSolution/src/studentSolution/: gpu.cpp  gpu.hpp  prepareModel.cpp  prepareModel.hpp  shaderFunctions.cpp  shaderFunctions.hpp
tests/: CMakeLists.txt
tests/src/tests/: conformanceTests.cpp  conformanceTests.hpp  getNofExamples.cpp  getNofExamples.hpp  isMemDifferent.cpp  isMemDifferent.hpp  memDeepCopy.cpp  memDeepCopy.hpp  performanceTest.cpp  renderMethodFrame.cpp  renderMethodFrame.hpp  str.cpp  str.hpp  takeScreenShot.cpp  takeScreenShot.hpp  teacher_render_test.cpp  testCommon.cpp  testCommon.hpp
tests/src/tests/commands/: bindFramebufferTests.cpp  bindProgramTests.cpp  bindVertexArrayTests.cpp  clear.cpp  clear_multiple_framebuffers.cpp  drawID_no_program.cpp  setBackfaceCulling.cpp  setBlockWrites.cpp  setDrawID.cpp  setFrontFace.cpp  setStencil.cpp  subCommandTests.cpp  user.cpp
tests/src/tests/draw_raster/: backfaceCulling.cpp  barycentrics.cpp  blending.cpp  clippingTests.cpp  color_writes.cpp  depth_test.cpp  depth_writes.cpp  discardTest.cpp  perspectiveDivision.cpp  rasterization.cpp  stencil_test.cpp  stencil_writes_dpfail.cpp  stencil_writes_dppass.cpp  stencil_writes_sfail.cpp  util_raster_part_test.cpp  util_raster_part_test.hpp
tests/src/tests/draw_vector/: clearAndDrawMixed.cpp  drawID_empty_program.cpp  gl_VertexID_indexing.cpp  gl_VertexID_no_indexing.cpp  vertexArrayTests.cpp  vs_interface.cpp
tests/src/tests/model/: createModel.cpp  createModel.hpp  drawModelTests.cpp  finalImageTest.cpp  fragmentShader.cpp  traverseModelTests.cpp  vertexShader.cpp
(+9 files in other folders)
